belum tuntas di hero delete dan game delete
